*************************
 Image_Graph - Changelog
*************************
Version 0.3.0-dev3 [2005-xxx-xx] - Jesper Veggerby <pear.nosey@veggerby.dk>
    * Added possibility to invert axis direction, fx. minimum at top or bottom
    * Fixed axis so that forceMinimum() works with axis intersection
    * Fixed PDF (PDFlib) driver to display images correctly

Version 0.3.0-dev2 [2005-Jan-13] - Jesper Veggerby <pear.nosey@veggerby.dk>
    * Added functionality for multi-level labels (ticks, text, etc.) to support for minor and major labels (and more if needed)
    * Added fontmapping in GD drivers useful for mapping mnemonic fontnames, i.e. Times New Roman to font file names (either partial or full)
    * Added configuration option in Config.php (IMAGE_GRAPH_SYSTEM_FONT_PATH) enabling to specify default search path for system fonts
        - On Windows systems this defaults to %SYSTEMROOT%\Fonts\
    * Added 'auto' split on layouts - calculated automatically based on actual sizes of the parts (supported only with titles)
    * Added visual tests - not PHPUnit, test cases:
        - Basic testing if requirements are met (GD + Freetype)
        - Testcases for testing drivers
        - Plot tests
        - Axis tests
    * Added support for setting width on the bars in a bar chart
    * Added setFontColor(), setFontSize(), setFontAngle() to elements for easy change of properties of propagating fonts, without needing to create a new object
    * Added new setTitle() method to axis to allow for easier displaying of axis titles
    * Added Image_Graph_Plot_CandleStick to display financial charts for the stock market
    * Added Image_Graph_Plot_Band
    * Added major tick customizability to axis
    * Added possibility to use user-defined values as axis-labels
    * Added support for adding an array to Image_Graph_Dataset_Trivial for easy point addition
    * Added some error/insanity checks