@@ -23,9 +23,7 @@
 // +--------------------------------------------------------------------------+
 
 /**
- * This is a visual test case, testing the setting of the intersection of
- * a x-axis on a secondary y-axis, and the intersection of a secondary-y-
- * axis on the x-axis.
+ * This is a visual test case, testing the category axis.
  * 
  * @package Image_Graph
  * @subpackage Tests
@@ -39,7 +37,7 @@
 require 'Image/Graph.php';    
 
 // create the graph
-$Graph =& Image_Graph::factory('graph', array(600, 400));
+$Graph =& Image_Graph::factory('graph', array(400, 300));
 // add a TrueType font
 $Font =& $Graph->addNew('ttf_font', 'Gothic');
 // set the font size to 11 pixels
@@ -50,46 +48,46 @@ $Graph->setFont($Font);
 // create the plotarea
 $Graph->add(
     Image_Graph::vertical(
-        Image_Graph::factory('title', array('Testing Secondary Axis Intersection', 10)),               
-        $Matrix = Image_Graph::factory('Image_Graph_Layout_Matrix', array(3, 3)),           
+        Image_Graph::factory('title', array('Testing Category Axis', 10)),               
+        $Plotarea = Image_Graph::factory('plotarea', array('Image_Graph_Axis_Category', 'Image_Graph_Axis_Category')),           
         5            
     )
 );
 
-$DS[0] =& Image_Graph::factory('dataset', array(array('0' => 1, '1' => 2, '2' => 0)));
-$DS[1] =& Image_Graph::factory('dataset', array(array('0' => -1, '1' => 2, '2' => 1)));
-$DS[2] =& Image_Graph::factory('dataset', array(array('0' => 1, '1' => 3, '2' => 2)));
-$DS2[0] =& Image_Graph::factory('dataset', array(array('0' => -1, '1' => 2, '2' => 1)));
-$DS2[1] =& Image_Graph::factory('dataset', array(array('0' => 1, '1' => 3, '2' => 2)));
-$DS2[2] =& Image_Graph::factory('dataset', array(array('0' => 1, '1' => 2, '2' => 1)));
+$DS =& Image_Graph::factory('dataset');
+$DS->addPoint('Germany', 'England');
+$DS->addPoint('Denmark', 'France');
+$DS->addPoint('Sweden', 'Denmark');
+$DS->addPoint('England', 'France');
+$DS->addPoint('Norway', 'Finland');
+$DS->addPoint('Denmark', 'Finland');
+$DS->addPoint('Iceland', 'Germany');
+$DS->addPoint('Norway', 'France');
 
-for ($row = 0; $row < 3; $row++) {
-    for ($col = 0; $col < 3; $col++) {
-        if (isset($DS[$col])) {
-            $Plotarea =& $Matrix->getEntry($row, $col);
-            $AxisY =& $Plotarea->getAxis(IMAGE_GRAPH_AXIS_Y);
-            $AxisY->setLineColor('silver');
-            
-            $AxisX =& $Plotarea->getAxis(IMAGE_GRAPH_AXIS_X);
-            $AxisX->setAxisIntersection(($row < 1 ? 0 : 1), IMAGE_GRAPH_AXIS_Y_SECONDARY);
-            $AxisX->setTitle('Intersect at y2=' . ($row < 1 ? '0' : '1'));
-            
-            $Plot =& $Plotarea->addNew('line', &$DS2[$col]);
-            $Plot->setLineColor('red@0.1');
-            $Plot2 =& $Plotarea->addNew('line', &$DS[$col], IMAGE_GRAPH_AXIS_Y_SECONDARY);
-            $Plot2->setLineColor('green');
-            $Plotarea->setBackgroundColor('blue@0.2');
+$DS2 =& Image_Graph::factory('dataset');
+$DS2->addPoint('Sweden', 'France');
+$DS2->addPoint('Austria', 'Germany');
+$DS2->addPoint('Norway', 'Holland');
+$DS2->addPoint('Denmark', 'Germany');
+$DS2->addPoint('Sweden', 'Holland');
+$DS2->addPoint('Iceland', 'Denmark');
 
-            $AxisYsec =& $Plotarea->getAxis(IMAGE_GRAPH_AXIS_Y_SECONDARY);                
-            if ($row > 1) {
-                $AxisYsec->setAxisIntersection(1);
-                $AxisYsec->setTitle('Intersect at x=1');
-            } else {
-                $AxisYsec->setTitle('Intersect at x=max');
-            }
-        }
-    }
-}
+/* Expect x-axis to be ordered:
+ * Germany, Denmark, Sweden, England, Austria, Norway, Iceland
+ * 
+ * Expect y-axis to be ordered:
+ * England, France, Denmark, Finland, Holland, Germany
+ * 
+ * Special points are X = Austria and Y = Holland, which are expected to be
+ * "placed" before Norway and Germany respective (since that is the point at
+ * which they exist "before" in the dataset on their first occurence)
+ */ 
+
+$Plot =& $Plotarea->addNew('line', &$DS);
+$Plot->setLineColor('red');
+
+$Plot2 =& $Plotarea->addNew('line', &$DS2);
+$Plot2->setLineColor('blue');
 
 $Graph->done();
 ?>
